# 3DCellSimulationsElectricalStimulation

./: .gitignore  LICENSE  README.md
CGALMesh_3D/: CMakeLists.txt  README.md  convert_tif_to_inr.py  electrodes_mesh.py  medit_to_netgen.py  merge_mesh.py  mesh_3D_image.cpp  mesh_3D_image_with_polyline_features.cpp  mesh_3D_image_with_weight_and_features.cpp  mesh_3D_image_without_features.cpp  plot_medit_mesh.py
CGALMesh_3D/FluorescenceMicroscopyData/: README.md  convert_tif_to_inr.py  generate_surface_meshes.sh  medit_to_netgen.py  preprocess_and_reconstruct.sh  process_mesh_script.py  process_tif_parallel.py  process_tif_parallel_astec.py  reconstruction3D.py  runMeshing.py
CGALMesh_3D/proof-of-concept/: OCCtest.ipynb  OCCtest.py  README.md  get_surface_mesh.py  merge_mesh.py
RealisticSimulations/SimpleTest/: README.md  mark_outer_cell.py  marked_outer_93.npy  solver.py  solver_celegans.py  solver_celegans_plateau.py  solver_draw.py  solver_manual.py  solver_outer_inner.py
RealisticSimulations/SimulationPaper/: README.md  mark_outer_cell.py  runSolver.sh  runsingleshell.SLURM  solver.py  solver_outer_inner.py
ValidationSimulations/: README.md
ValidationSimulations/ConvergenceRates/2DAnalytical/: README.md  plot_convergence.py  plot_convergence_h1.py  plot_convergence_l2.py  solver.py  sympysolution.py
ValidationSimulations/ConvergenceRates/2DAnalytical/benchmark/: results_order_1.csv  results_order_2.csv  results_order_3.csv  results_order_uncurved_1.csv  results_order_uncurved_2.csv  results_order_uncurved_3.csv
ValidationSimulations/ConvergenceRates/3DAnalytical/: README.md  TMPsympyJones.py  convergence_run.sh  convergence_run_petsc_pre.sh  convergence_run_pure_ngsolve.sh  geometry.py  plot_convergence.py  plot_convergence_h1.py  plot_convergence_l2.py  solver.py  solver_petsc_preconditioner.py  solver_pure_ngsolve.py
ValidationSimulations/ConvergenceRates/3DAnalytical/benchmark/: results_order_1.csv  results_order_2.csv  results_order_uncurved_1.csv  results_order_uncurved_2.csv
ValidationSimulations/ImpedanceSpectra/36cells/: README.md  check-models.py  generate_all_meshes.sh  generate_mesh.py  model_input.txt  run_all_simulations.sh
ValidationSimulations/ImpedanceSpectra/36cells/DoubleShell/: solver.py
ValidationSimulations/ImpedanceSpectra/36cells/DoubleShell/benchmark/: results_double_shell_2.csv
ValidationSimulations/ImpedanceSpectra/36cells/DoubleShellWall/: solver.py
ValidationSimulations/ImpedanceSpectra/36cells/DoubleShellWall/benchmark/: results_double_shell_wall_2.csv
ValidationSimulations/ImpedanceSpectra/36cells/SingleShell/: solver.py  solver_petsc.py
ValidationSimulations/ImpedanceSpectra/36cells/SingleShell/benchmark/: results_single_shell_2.csv
ValidationSimulations/ImpedanceSpectra/36cells/SingleShellWall/: solver.py
ValidationSimulations/ImpedanceSpectra/36cells/SingleShellWall/benchmark/: results_single_shell_wall_2.csv
ValidationSimulations/LinKKTest/: Plot-LinKK-test.ipynb  README.md  linkk_test_membrane_admittance.py  linkk_test_solver_convergence.py
cell_simulation_utilities/: pyproject.toml
cell_simulation_utilities/src/cell_simulation_utilities/: __init__.py  bilinear_form.py  create_geo.py  geo_bennets.py  material_info.py  model_layout.py  units.py  utils.py
