[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cell_simulation_utilities"
version = "0.1"
description = "Tools to run numerical simulations of electrical stimulation of large 3D cellular constructs"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Julius Zimmermann", email = "julius.zimmermann@uni-rostock.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
dependencies = ["pandas",
                "numpy",
                "scipy"
                ]

[project.urls]
homepage = "TODO"
repository = "TODO"
